[project]
name = "agent-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.18",
    "langchain-aws>=1.4.6",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "streamlit>=1.57.0",
]
